--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ cache:
     - '$HOME/.m2/repository'
     - '$HOME/.gradle'
 
-script: "./gradlew clean build"
+script: "chmod +x ./gradlew clean build"
 
 before_deploy:
    - zip -r springboot2-aws-board *
