--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ before_deploy:
 deploy:
    - provider: s3
      access_key_id: $AWS_ACCESS_KEY
-     secret_key_id: $AWS_SECRET_KEY
+     secret_access_key: $AWS_SECRET_KEY
      
      bucket: iamchan_build
      region: ap-northeast-2
