add codedeploy prop/fix travis prop

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,20 @@ deploy:
      acl: private
      local_dir: deploy
      wait-until-deployed: true
+     
+   - provider: codedeploy
+     access_key_id: $AWS_ACCESS_KEY
+     secret_access_key: $AWS_SECRET_KEY
+     
+     bucket: iamchan-build
+     key: springboot2-aws-board.zip
+     bundle_type: zip
+     application: iamchan-test-webservice
+     
+     deployment_group: iamchan-test-webservice-group
+     
+     region: ap-northeast-2
+     wait-until-deployed: true
 
 notifications:
    email:
