--- a/.travis.yml
+++ b/.travis.yml
@@ -14,9 +14,13 @@ cache:
 script: "./gradlew clean build"
 
 before_deploy:
-   - zip -r springboot2-aws-board *
-   - mkdir -p deploy
-   - mv springboot2-aws-board.zip deploy/springboot2-aws-board.zip
+   - mkdir -p before-deploy
+   - cp sciprts/*.sh before-deploy/
+   - cp appspec.yml before-deploy/
+   - cp build/libs/*.jar before-deploy/
+   - cd before-deploy && zip -r before-deploy
+   - cd ../ && mkdir -p deploy
+   - mv before-deploy/before-deploy.zip deploy/springboot2-aws-board.zip
    
 deploy:
    - provider: s3
