--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ before_deploy:
   - cp build/libs/*.jar before-deploy/
   - cd before-deploy && zip -r before-deploy *
   - cd ../ && mkdir -p deploy
-  - mv before-deploy/before-deploy.zip deploy/springboot2-aws-board.zip
+  - mv before-deploy/before-deploy.zip deploy/iamchan_test.zip
    
 deploy:
    - provider: s3
